--- a/BookStore/Properties/launchSettings.json
+++ b/BookStore/Properties/launchSettings.json
@@ -13,9 +13,19 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7272;http://localhost:5272",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "BookStore.API": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+
     },
     "IIS Express": {
       "commandName": "IISExpress",
